# qcaml

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.rst  dune-project  qcaml.opam
.github/: dependabot.yml
.github/workflows/: main.yml  pages.yml
examples/: apply_gate.ml  bloch_sphere.ml  dune  init_qubit.ml  measure_qubit.ml  statistics.ml  test_graphics.ml
lib/: complex.ml  complex.mli  dune  gate.ml  gate.mli  qubit.ml  qubit.mli
src/: bloch_sphere.c  circuit.mli  complex.ml  complex.mli  discover.ml  dune  gate.ml  gate.mli  measurement.ml  measurement.mli  qubit.ml  qubit.mli  visualization.ml  visualization.mli
src/c/: bloch_sphere.c
tests/: dune  test_complex.ml  test_gate.ml  test_qubit.ml
