(executable
 (public_name init_qubit_exe)
 (name init_qubit)
 (libraries quantum))

(executable
 (public_name apply_gate_exe)
 (name apply_gate)
 (libraries quantum))

(executable
 (public_name measure_qubit_exe)
 (name measure_qubit)
 (libraries quantum))

(executable
 (public_name plot_exe)
 (name test_plot)
 (libraries quantum))
