(executable
 (name discover)
 (modules discover)
 (libraries dune-configurator))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action (run ./discover.exe)))

(library
 (name quantum)
 (public_name qcaml)
 (libraries)
 (modules qubit gate circuit measurement visualization complex)
 (foreign_stubs
  (language c)
  (names bloch_sphere)
  (flags (:include c_flags.sexp)))
 (c_library_flags (:include c_library_flags.sexp))
 (instrumentation (backend bisect_ppx)))
